Separating server side logic